--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -1,6 +1,6 @@
 <main>
   <div class="row">
-    <app-prpduct-description></app-prpduct-description>
+    <app-popduct-description></app-product-description>
   </div>
   <div class="row">
     <div class="col-sm-8">
